<resources>
    <string name="app_name">PenniezZZ</string>
    <string name="interval_exp"> Please set the time for your alarm above. Below enter the amount of time you"&apos;"ll have to dismiss the alarm. <br></br>If you do not press the dismiss button in time, you will be asked to donate to the charity or organization of your choosing.</string>
    <string name="interval">Interval:</string>
    <string name="alarm_label">Set Alarm</string>
    <string-array name="intervals">
        <item>Select one</item>
        <item>30 seconds</item>
        <item>1 minute</item>
        <item>1 min 30s</item>
        <item>2 minutes</item>
        <item>2 mins 30s</item>
        <item>3 minutes</item>
    </string-array>
    <string name="dollar">$</string>
    <string name="donateExp">Please enter how much money you would like to donate. <br></br> The minimum is 10&#x00A2; and the maximum is &#36;50.</string>
    <string name="suggest">We suggest</string>
    <string name="ten"><u>&#36;10,</u></string>
    <string name="five"><u>&#36;5,</u></string>
    <string name="twentyfive">or <u>&#36;25.</u></string>
    <string name="currency">All donations are in USD</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="charityL">Set Charity</string>
    <string name="donateL">Set Donation Amount</string>
    <string-array name="causesOptions">
        <item>Health</item>
        <item>Justice</item>
        <item>Women"&apos;"s Rights</item>
        <item>Education</item>
        <item>Covid-19</item>
        <item>Environment</item>
    </string-array>
    <string-array name="womensOptions">
        <item>Planned Parenthood</item>
        <item>UN Women</item>
    </string-array>
    <string-array name="healthOptions">
        <item>St. Jude Children"&apos;"s Hospital</item>
        <item>American Cancer Society</item>
    </string-array>
    <string-array name="justiceOptions">
        <item>Black Lives Matter</item>
        <item>ACLU</item>
    </string-array>
    <string-array name="eduOptions">
        <item>Khan"&apos;"s Academy</item>
        <item>Pencils of Promise</item>
    </string-array>
    <string-array name="covidOptions">
        <item>World Health Organization (WHO)</item>
        <item>CDC Foundation</item>
    </string-array>
    <string-array name="envOptions">
        <item>Climate Emergency Fund</item>
        <item>United Nations Environment Programme (UNEP)</item>
    </string-array>
    <string name="currentL">Current Time:</string>
    <string name="alarmL">Alarm set for:</string>
    <string name="nowake">So you didn"&apos;"t wake up on time... \n\nBut you can
still start your day off with some good!</string>

</resources>